              + gate/werner
              + gate/isotropic
              + gate/copydot
              + gate/epsilon
              + examples/werner_states
              * examples/nmr_sequences now also does pulse strength errors
              * examples/bb84 gives more information
              + hamiltonian/jaynes_cummings
              + utils/rand_GL
              + utils/ravel_index
              + utils/superop_to_choi
              - utils/nullspace_hermitian
              b utils/superop_fp: hermitian matrices are a real subspace, orthogonalization must respect this
              * utils/unravel_index works on vectors of indices
              * utils/tensorbasis returns the integer locality of each element
              * utils/tensorsum can now handle matrices and any number of inputs
              * utils/fermion_ladder simplified
              * seq: sign convention changed
              - seq/cpmg
              + seq/dd
              + seq/knill
              b seq/scrofulous now uses the phi parameter
              * markov/bath class rewritten, now supports fermionic baths as well
              b markov/ops: warns of possible RWA violations
              * invariant/LU uses lmap/tensorpow
              + more test scripts

0.12.0  in progress
              + examples/magic_state_distillation
              + examples/dynamical_decoupling
              + markov/bath.plot_correlation
              + markov/bath.plot_LUT
              + markov/bath.plot_cutoff
              * hamiltonian/jaynes_cummings:  allow multiple modes as well as multiple atoms.
              + utils/cm_phase
              + utils/R_SO3
              + utils/wigner3j
              + utils/clebsch_gordan
              + utils/RWA
              + utils/named_state, state constructor simplified.
              * rename: markov/ops => utils/rotating_frame
              * utils/spectral decomposition now returns a column vector.