@@ -51,6 +51,20 @@ r1 = inv_vec(L * vec(rho));
 r2 = temp' * kron(rho, C) * temp;
 assert_o(norm(r1-r2), 0, tol);
 
+%% Lindblad superoperators, fixed point states
+
+A = rand_GL(dim);
+A(abs(A)<2.3) = 0;  % add some sparsity
+L = superop_lindblad({A}, H);
+[Q, s] = superop_fp(L);
+
+assert_o(norm(L*Q), 0, tol);  % columns of Q belong in ker L
+assert_o(trace(inv_vec(Q(:,1))), 1, tol);  % first col is trace-1
+for k=1:size(Q,2)
+    B = inv_vec(Q(:,k));
+    assert_o(norm(B-B'), 0, tol);  % all cols are hermitian
+end
+
 
 %% spectral decomposition
 
@@ -69,13 +83,17 @@ D = rand_hermitian(dim);
 
 [dH, A] = rotating_frame(H, D);
 assert(length(dH) == size(A, 1));
-assert_o(dH(1), 0, tol);  % first dH is always zero
 
 t = randn(); % random time
-temp = A{1};
-for k=2:length(dH)
+temp = 0;
+for k=1:length(dH)
     x = exp(-1i*dH(k)*t) * A{k};
-    temp = temp +x+x';
+    if dH(k) ~= 0
+        % nondiagonal
+        temp = temp +x+x';
+    else
+        temp = temp +x;
+    end
 end
 U0 = expm(1i*H*t);  % rotation generated by H
 assert_o(norm(temp-U0*D*U0'), 0, tol);
