@@ -220,3 +220,4 @@ b bugfix
               + utils/named_state, state constructor simplified.
               * rename: markov/ops => utils/rotating_frame
               * utils/spectral decomposition now returns a column vector.
+              b utils/superop_fp: preserve hermiticity by doing orthogonalization using Gram-Schmidt
